2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: any reference or array type or pointer
	  type can be cast to a generic pointer

2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vapi/libxml-2.0.vala: expand libxml2 bindings,
	  patch by Michael Lawrence, fixes bug 452016

2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: fix writing type arguments of formal
	  parameters
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  regenerated to use out instead of ref parameters

2007-07-10  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala, gobject/valaccodecompiler.vala,
	  gobject/valacodegeneratormethod.vala, compiler/valacompiler.vala:
	  add --thread option to enable multithreading support

2007-07-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecompiler.vala: always use gobject-2.0

2007-07-10  Jürg Billeter  <j@bitron.ch>

	* vapi/hal.vala: fix typo

2007-07-09  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-07-09  Jürg Billeter  <j@bitron.ch>

	* NEWS, README, configure.ac: update for 0.1.0 release

2007-07-09  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l, vala/parser.y, vala/valaarray.vala,
	  vala/valaarraycreationexpression.vala, vala/valaattribute.vala,
	  vala/valabaseaccess.vala, vala/valablock.vala,
	  vala/valabooleanliteral.vala, vala/valacallback.vala,
	  vala/valaclass.vala, vala/valacodecontext.vala,
	  vala/valacodenode.vala, vala/valacreationmethod.vala,
	  vala/valadatatype.vala, vala/valaelementaccess.vala,
	  vala/valaenum.vala, vala/valafield.vala, vala/valaflags.vala,
	  vala/valaformalparameter.vala, vala/valaforstatement.vala,
	  vala/valainitializerlist.vala, vala/valaintegerliteral.vala,
	  vala/valainterface.vala, vala/valainterfacewriter.vala,
	  vala/valainvocationexpression.vala, vala/valainvokable.vala,
	  vala/valalambdaexpression.vala, vala/valaliteralexpression.vala,