@@ -1,6 +1,6 @@
 /* valaforeachstatement.vala
  *
- * Copyright (C) 2006  Jürg Billeter
+ * Copyright (C) 2006-2007  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -83,7 +83,10 @@ public class Vala.ForeachStatement : Statement {
 		visitor.visit_begin_foreach_statement (this);
 
 		type_reference.accept (visitor);
+
 		collection.accept (visitor);
+		visitor.visit_end_full_expression (collection);
+
 		body.accept (visitor);
 
 		visitor.visit_end_foreach_statement (this);
